--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1>KOROKORO</h1>
             <div class="nav-btn">
                 <li class="nav-btn-link"><a href="index.html">TOP</a></li>
-                <li class="nav-btn-link"><a href="#" >ABOUT</a></li>
-                <li class="nav-btn-link"><a href="#">SNS</a></li>
+                <li class="nav-btn-link"><a href="#aboutme" >ABOUT</a></li>
+                <li class="nav-btn-link"><a href="#aboutsns">SNS</a></li>
             </div>
         </div>
     </header>
@@ -32,6 +32,7 @@
         </div>
     </div>
     <!-- About -->
+    <div class="spacer"><a name="aboutme"></a></div>
     <div class="container">
         <h2 class="title">ABOUT</h2>
         <h3 class="sub-title">PROFILE</h3>
@@ -83,6 +84,7 @@
         </div>
     </div>
     <!-- SNS -->
+    <div class="spacer"><a name="aboutsns"></a></div>
     <div class="container sns">
         <h2 class="title">SNS</h2>
         <div class="info">↓　　TAP THIS ICON　　↓</div>
